--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -31,3 +31,5 @@
 
 en:
   hello: "Hello world"
+  about: "BIENVENUE is an events platform which aims to offer an alternative fair viewing experience format, by connecting galleries, professionals and art industries with both collectors and amateurs in a way that rethinks the role of the fair under the terms of an open dialogue.
+        In a spirit of decompartmentalization, BIENVENUE deploys its actions in the fields of Contemporary Art, Design, Applied and Decorative Arts. It's held five times a year, alternating its editions between design and contemporary art."
