--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -34,20 +34,19 @@ en:
     about: "ABOUT"
     partner: "PARTNERS"
     registration: "REGISTRATION"
+    exhibitors: "EXHIBITORS"
+    programm: "PROGRAMM"
 
   pages:
     home:
       about: "BIENVENUE is an events platform which aims to offer an alternative fair viewing experience format, by connecting galleries, professionals and art industries with both collectors and amateurs in a way that rethinks the role of the fair under the terms of an open dialogue.
         In a spirit of decompartmentalization, BIENVENUE deploys its actions in the fields of Contemporary Art, Design, Applied and Decorative Arts. It's held five times a year, alternating its editions between design and contemporary art."
     registration:
-    title: "SELECT YOUR TITLE"
-    mrs: "MRS."
-    first_name: "FIRST NAME"
-    last_name: "LAST NAME"
-    status: "SELECT YOUR STATUS"
-    collector: "COLLECTOR"
-    curator: "CURATOR"
-    visitor: "VISITOR"
-    category: "SELECT YOUR CATEGORY"
-    submit: "SUBMIT"
+      page_title: "REGISTRATION"
+      title: "SELECT YOUR TITLE"
+      first_name: "FIRST NAME"
+      last_name: "LAST NAME"
+      status: "SELECT YOUR STATUS"
+      category: "SELECT YOUR CATEGORY"
+      submit: "SUBMIT"
     
