--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -8,8 +8,8 @@ fr:
 
   pages:
     home:
-      about: "BIENVENUE est une plateforme événementielle qui vise à proposer un format alternatif d'expérience de visionnage de la foire, en mettant en relation galeries, professionnels et industries de l'art avec les collectionneurs et les amateurs, d'une manière qui repense le rôle de la foire sous les termes d'un dialogue ouvert.
-         Dans un esprit de décloisonnement, BIENVENUE déploie ses actions dans les domaines de l'Art Contemporain, du Design, des Arts Appliqués et Décoratifs. Il se tient cinq fois par an, alternant ses éditions entre design et art contemporain."
+      about: "BIENVENUE est une plateforme événementielle qui propose un format alternatif de regard sur les foires, en connectant les galeries, les professionnels et les industries de l'art avec les collectionneurs et les amateurs d'une manière qui repense le rôle des salons dans le cadre d'un dialogue ouvert. 
+      Dans un esprit de décloisonnement, BIENVENUE déploie ses actions dans les domaines de l'art contemporain, du design, des arts appliqués et décoratifs. Elle se déroule cinq fois par an, alternant ses éditions entre le design et l'art contemporain."
     registration:
       page_title: "INSCRIPTION"
       title: "SELECTIONNEZ UN TITRE"
