--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -35,7 +35,7 @@ en:
     partner: "PARTNERS"
     registration: "REGISTRATION"
     exhibitors: "EXHIBITORS"
-    programm: "PROGRAMM"
+    programm: "PROGRAM"
 
   pages:
     registration:
